<resources>
    <string name="app_name">Blogster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_have_an_account_sign_up">Dont have an account?</string>
    <string name="name">Name</string>
    <string name="title_feed">Feed</string>
    <string name="title_create_article">Create Article</string>
    <string name="title_profile">Profile</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="article">Articles</string>
    <string name="title">Title</string>
    <string name="bio">Bio</string>
    <string name="body">Body</string>
    <string name="submit">Submit</string>
    <string name="arg_article_id">ARTICLE_ID</string>
    <string name="image_url">image url</string>
    <string name="username">username</string>
</resources>